syntax = "proto3";

package chatroom.msgpb;

message FriendMsgsTemp {
    repeated string msgs = 1;
}